04-traefik/01-middlewares-servicetransports.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https-redirect
spec:
    redirectScheme:
      scheme: https
      permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: production-rate-limit
spec:
  rateLimit:
    average: 100
    burst: 50
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: production-security
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
