04-traefik/02-services-endpoints.yaml
# ---
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: https-service-jupyterhub
#   labels:
#     kubernetes.io/service-name: https-service-jupyterhub
#     endpointslice.kubernetes.io/managed-by: "cluster-admin"
# addressType: IPv4
# ports:
#   - port: 443
# endpoints:
#   - addresses:
#       - "161.45.160.30"
#       - "161.45.160.31"
#       - "161.45.160.32"
---
apiVersion: v1
kind: Endpoints
metadata:
  name: https-service-jupyterhub
subsets:
  - addresses:
      - ip: 161.45.160.30
      - ip: 161.45.160.31
      - ip: 161.45.160.32
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: https-service-jupyterhub
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: mtsu-jupyterhub-traefik-cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: https-service-biosim
subsets:
  - addresses:
      - ip: 161.45.156.101
      - ip: 161.45.156.102
      - ip: 161.45.156.103
      - ip: 161.45.156.104
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: https-service-biosim
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: mtsu-biosim-traefik-cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: https-service-raziel
subsets:
  - addresses:
      - ip: 161.45.164.103
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: https-service-raziel
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: mtsu-raziel-traefik-cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: https-service-sainju
subsets:
  - addresses:
      - ip: 161.45.164.89
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: https-service-sainju
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: mtsu-sainju-traefik-cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
